# dwm-9

./: .gitignore  CMakeLists.txt  README.md  config.def.h  config.h  config.mk  dbg.c  dwm.c  unfloat.c
keyboard-layout-editor.com/: dwm-alex.json  dwm-default.json  uhk-ansi-dwm-default.json  uhk-ansi-dwm.json
patches/alex/: dwm-unfloat-6.2.diff
patches/upstream/: dwm-focusonnetactive-2017-12-24-3756f7f.diff  dwm-keycodes-20170511-ceac8c9.diff  dwm-keycodes-6.1.diff  dwm-pertag-20170513-ceac8c9.diff  dwm-push-20160731-56a31dc.diff  dwm-systray-20190208-cb3f58a.diff  dwm-unfloatvisible-6.2.diff
